Fixed z-index issue with luya search bar; Closes #1477

--- a/modules/admin/src/resources/scss/components/_luyasearch.scss
+++ b/modules/admin/src/resources/scss/components/_luyasearch.scss
@@ -6,7 +6,7 @@
     top: 0;
     bottom: 0;
     background: white;
-    z-index: z-index(before-content);
+    z-index: z-index(luyasearch);
     padding-left: 62px;
     transition: .25s left ease-in-out;
     box-shadow: 0 0 10px -2px map-get($grays, 800);
