--- a/modules/admin/src/resources/scss/variables/_zindex.scss
+++ b/modules/admin/src/resources/scss/variables/_zindex.scss
@@ -7,14 +7,15 @@ $zindex-elements:
         file-detail,
         block-drop-indicator,
         block-toolbar,
-        navbar,
         dropdown,
         popover,
-        loadingbar,
+        luyasearch,
+        navbar,
         toast,
         overlay,
         modal,
         modal-toast,
         tooltip,
         debug-toolbar,
+        loadingbar,
 ;
